Update plugins and switch to Java 21 (#58)
* Update plugins and switch to Java 21

* Try updating Alpine

* Update actions

* Continued updates

* Add distribution to maven setup action