@@ -1,12 +1,13 @@
 #!/bin/ash
-JAVA_FLAGS="-XX:+UseG1GC -XX:+ParallelRefProcEnabled -XX:MaxGCPauseMillis=200 -XX:+UnlockExperimentalVMOptions
--XX:+DisableExplicitGC -XX:+AlwaysPreTouch -XX:G1NewSizePercent=30 -XX:G1MaxNewSizePercent=40 -XX:G1HeapRegionSize=8M
--XX:G1ReservePercent=20 -XX:G1HeapWastePercent=5 -XX:G1MixedGCCountTarget=4 -XX:InitiatingHeapOccupancyPercent=15
--XX:G1MixedGCLiveThresholdPercent=90 -XX:G1RSetUpdatingPauseTimePercent=5 -XX:SurvivorRatio=32 -XX:+PerfDisableSharedMem
--XX:MaxTenuringThreshold=1 -Dusing.aikars.flags=https://mcflags.emc.gs -Daikars.new.flags=true"
+JAVA_FLAGS="-XX:+UseZGC -XX:AllocatePrefetchStyle=1 -XX:+ZGenerational -XX:+UnlockExperimentalVMOptions
+-XX:+UnlockDiagnosticVMOptions -XX:+AlwaysActAsServerClassMachine -XX:+AlwaysPreTouch -XX:+DisableExplicitGC
+-XX:NmethodSweepActivity=1 -XX:ReservedCodeCacheSize=400M -XX:NonNMethodCodeHeapSize=12M -XX:ProfiledCodeHeapSize=194M
+-XX:NonProfiledCodeHeapSize=194M -XX:-DontCompileHugeMethods -XX:MaxNodeLimit=240000 -XX:NodeLimitFudgeFactor=8000
+-XX:+UseVectorCmov -XX:+PerfDisableSharedMem -XX:+UseFastUnorderedTimeStamps -XX:+UseCriticalJavaThreadPriority
+-XX:+ParallelRefProcEnabled -Dlog4j2.formatMsgNoLookups=true"
 
 /minecraft/bin/startup.sh
 
 /minecraft/bin/downscaler.sh &
 
-exec /minecraft/bin/mc-server-runner java $JAVA_FLAGS -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -Xms${MIN_MEMORY:-1G} -Xmx${MAX_MEMORY:-1G} -jar server.jar
+exec /minecraft/bin/mc-server-runner java $JAVA_FLAGS -XX:+UseCGroupMemoryLimitForHeap -XX:MaxRAMFraction=1 -Xms${MIN_MEMORY:-1G} -Xmx${MAX_MEMORY:-1G} -jar server.jar
